--- a/views/snippets/datum.tt
+++ b/views/snippets/datum.tt
@@ -15,7 +15,10 @@
             [% END %]
         [% END %]
     [% ELSE %]
-        [% curval.text %]
+        [% FOR link IN curval.links %]
+            <a href="/record/[% link.id %]?oi=[% link.refers_to_instance_id %]">[% link.href %]</a>
+            [% UNLESS loop.last %]; [% END %]
+        [% END %]
     [% END %]
 [% END %]
 
