Add label and group options for map

--- a/views/data_globe.tt
+++ b/views/data_globe.tt
@@ -13,7 +13,7 @@
 
             Plotly.setPlotConfig({locale: 'en-GB'});
 
-            var data = [ JSON.parse(base64.decode("[% globe_data %]")) ];
+            var data = JSON.parse(base64.decode("[% globe_data %]"));
 
             var layout = {
                 margin: {
