--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1857,19 +1857,22 @@ small.search_term {
 
 .select-widget .available .control {
   text-align: left;
-  padding: .3em .7em;
   width: 100%; }
 
 .select-widget .available.with-details .control {
   width: 81%; }
 
 .select-widget .control label {
-  margin-left: .3em;
-  display: inline-block;
-  width: 90%; }
+  display: block;
+  padding: .4em .7em;
+  margin: 0; }
 
 .select-widget .available .answer [type="radio"] {
+  margin-right: .3em;
   vertical-align: top; }
+
+.select-widget .available .answer [type="checkbox"] {
+  margin-right: .3em; }
 
 .select-widget .available .answer .details {
   padding: .5em .3em; }
