--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1850,6 +1850,11 @@ small.search_term {
   cursor: default; }
 
 .select-widget .available {
+  position: absolute;
+  left: 15px;
+  right: 15px;
+  z-index: 3;
+  background-color: #ffffff;
   border: 1px solid #336699;
   max-height: 19em;
   overflow-x: hidden;
