Fix bars sometimes not appearing on graphs
See https://github.com/jqPlot/jqPlot/pull/167

--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -43,7 +43,8 @@
                         renderer:$.jqplot.BarRenderer,
                         rendererOptions: {
                             shadow: false,
-                            fillToZero: true
+                            fillToZero: true,
+                            barMinWidth: 10
                         },
                         pointLabels: {
                             show: false,
