--- a/views/edit.tt
+++ b/views/edit.tt
@@ -661,6 +661,9 @@
             </button>
         </div>
         <ul hidden class="available [% details && 'with-details' %]" id="[% field %]_available_values">
+          <li class="search">
+            <input type="text" class="form-control-search">
+          </li>
         [% FOREACH value IN values %]
             [% NEXT IF value.deleted %]
             [% checked = editvalue.id_hash.${value.id} %]
@@ -726,6 +729,9 @@
             </button>
         </div>
         <ul hidden class="available [% details && 'with-details' %]" id="[% field %]_available_values">
+          <li class="search">
+            <input type="text" class="form-control-search">
+          </li>
         [% FOREACH value IN values %]
             [% NEXT IF value.deleted %]
             [% checked = editvalue.id_hash.${value.id} %]
