--- a/views/edit.tt
+++ b/views/edit.tt
@@ -662,7 +662,8 @@
         </div>
         <ul hidden class="available [% details && 'with-details' %]" id="[% field %]_available_values">
           <li class="search">
-            <input type="text" class="form-control-search">
+            <input type="search" class="form-control-search">
+            <span hidden class="form-control-search__clear">&times;</span>
           </li>
         [% FOREACH value IN values %]
             [% NEXT IF value.deleted %]
@@ -730,7 +731,8 @@
         </div>
         <ul hidden class="available [% details && 'with-details' %]" id="[% field %]_available_values">
           <li class="search">
-            <input type="text" class="form-control-search">
+            <input type="search" class="form-control-search">
+            <span hidden class="form-control-search__clear">&times;</span>
           </li>
         [% FOREACH value IN values %]
             [% NEXT IF value.deleted %]
